# machine-translation

./: .gitignore  GitHub上传指南.md  README.md  config.py  dependency_update_report.md  dependency_update_report_v2.md  precompute_cache.py  pyproject.toml  quick_fix_beam_search.py  setup.bat  setup.sh  test_installation.py  train.py  train_baseline.py  代码审查报告.md  修复说明.md  性能优化说明.md  解码器问题修复说明.md  语法检查报告.md  运行指南.md
configs/: base.yaml  decode_beam5.yaml  gcn_fusion.yaml
data/: __init__.py  adj_cache.py  dataset.py  dependency.py  tokenizer.py
models/: __init__.py  model.py  transformer_baseline.py
mt/: __init__.py
mt/data/: __init__.py  align.py  cache.py  dataset.py  dependency.py  tokenizer.py
mt/decoding/: __init__.py  beam.py  greedy.py
mt/eval/: __init__.py  dump_samples.py  sacrebleu_eval.py
mt/models/: __init__.py  fusion.py  gcn.py  model.py  transformer.py  transformer_baseline.py
mt/training/: __init__.py  hooks.py  loss.py  scheduler.py  trainer.py
mt/utils/: __init__.py  config_loader.py  io.py  logging.py
scripts/: decode.sh  migrate_adj_cache_to_edges.py  migrate_adj_to_edges.py  prepare_data.sh  train.sh
tests/: test_align.py  test_beam.py  test_dependency.py  test_fusion_improvements.py  test_gcn_improvements.py
training/: __init__.py  trainer.py  validator.py
utils/: __init__.py  decoder.py  masks.py
